# knowledge-integrated-named-entity-recognition

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: data_creation_config.yaml
configs/: baseline_biomedbert.yaml
scripts/: analyze_dictionary_matches.py  build_dictionary.py  prepare_data.py  train.py
src/core/: entity.py  example.py
src/data/: dictionary.py
src/inputs/: input_document.py  input_provider.py
src/ner_core/core/: entity.py  entity_queries.py  example.py
src/ner_core/models/: base.py
src/ner_core/training/: metrics.py  trainer.py
